# ScapeGoatTree

./: CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Node.cpp  Node.hpp  Node_8hpp.html  Node_8hpp.js  Node_8hpp_source.html  README.md  README_8md.html  RunTUI_8cpp.html  RunTUI_8cpp.js  ScapeGoatTree.cpp  ScapeGoatTree.hpp  ScapeGoatTree_8hpp.html  ScapeGoatTree_8hpp.js  ScapeGoatTree_8hpp_source.html  TreeDriver.cpp  TreeDriver_8cpp.html  TreeDriver_8cpp.js  _node_8hpp.html  _node_8hpp_source.html  _r_e_a_d_m_e_8md.html  _run_t_u_i_8cpp.html  _scape_goat_tree_8hpp.html  _scape_goat_tree_8hpp.js  _tree_driver_8cpp.html  _tree_driver_8cpp.js  annotated.html  annotated_dup.js  benchmark_8cpp.html  bindings.cpp  bindings_8cpp.html  bindings_8cpp.js  classITree-members.html  classITree.html  classITree.js  classNode-members.html  classNode.html  (+109 more)
.github/workflows/: docs.yml
CPP/: CMakeLists.txt  Node.hpp  RunTUI.cpp  ScapeGoatTree.hpp  TreeDriver.cpp  benchmark.cpp  bindings.cpp  iTree.cpp  iTree.hpp  py.py  queue.hpp  queue.tpp  scapegoatTree.tpp  scapegoat_tree.hpp  scapegoat_tree.tpp  stack.hpp  tests.cpp  vector.hpp
Python GUI/: gui.py
html/: _node_8hpp.html  _node_8hpp.js  _node_8hpp_source.html  _r_e_a_d_m_e_8md.html  _run_t_u_i_8cpp.html  _run_t_u_i_8cpp.js  _scape_goat_tree_8hpp.js  _scape_goat_tree_8hpp_source.html  _tree_driver_8cpp.html  annotated.html  annotated_dup.js  benchmark_8cpp.js  bindings_8cpp.html  class_i_tree-members.html  class_i_tree.html  class_i_tree.js  class_node.html  class_node.js  class_q_node.html  class_q_node.js  class_queue-members.html  class_queue.html  class_scape_goat_tree-members.html  class_scape_goat_tree.js  class_scape_goat_tree_1_1iterator-members.html  class_scape_goat_tree_1_1iterator.html  class_scape_goat_tree_1_1iterator.js  class_stack.html  class_vector-members.html  class_vector.html  class_vector.js  classes.html  dir_2ea739fe366135ec15f610d081b5ff33.html  dir_2ea739fe366135ec15f610d081b5ff33.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  (+36 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  (+65 more)
latex/: _node_8hpp.tex  _node_8hpp_source.tex  _run_t_u_i_8cpp.tex  _scape_goat_tree_8hpp.tex  _scape_goat_tree_8hpp_source.tex  _tree_driver_8cpp.tex  annotated.tex  benchmark_8cpp.tex  bindings_8cpp.tex  class_i_tree.tex  class_node.tex  class_q_node.tex  class_queue.tex  class_scape_goat_tree.tex  class_scape_goat_tree_1_1iterator.tex  class_stack.tex  class_vector.tex  dir_2ea739fe366135ec15f610d081b5ff33.tex  dirs.tex  files.tex  i_tree_8cpp.tex  i_tree_8hpp.tex  i_tree_8hpp_source.tex  index.tex  queue_8hpp.tex  queue_8hpp_source.tex  queue_8tpp.tex  queue_8tpp_source.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc  scapegoat_tree_8tpp.tex  scapegoat_tree_8tpp_source.tex  stack_8hpp.tex  stack_8hpp_source.tex  struct_command.tex  struct_menu_item.tex  tests_8cpp.tex  (+2 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  (+77 more)
